demo-cosign.yaml
# kubectl create namespace demoapp
# cosign login mtr.devops.telekom.de -u xxxx -p xxxxx
# cosign generate-key-pair k8s://demoapp/cosign
# cosign sign --key k8s://demoapp/cosign mtr.devops.telekom.de/mcsps/test1:master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-deployment
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: demoapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - image: mtr.devops.telekom.de/mcsps/test1:master
        imagePullPolicy: Always
        name: demoapp
        ports:
        - containerPort: 8080
          name: 8080tcp
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          runAsNonRoot: true
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: demoapp-config
      dnsPolicy: ClusterFirst
      nodeSelector:
        role: worker
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: demoapp
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: demoapp-config
        name: demoapp-config
