mysql-client-pvc.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mysql-client
  name: mysql-client
spec:
  serviceName: mysql-client
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mysql-client
  template:
    metadata:
      labels:
        app: mysql-client
    spec:
      containers:
      - image: mtr.external.otc.telekomcloud.com/mcsps/mcsps-tools:latest
        imagePullPolicy: Always
        command: ['sh', '-c']
        args: ["tail -f /dev/null"]
        name: mysql-client
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: true
          privileged: false
          readOnlyRootFilesystem: false
          runAsUser: 0
        volumeMounts:
        - name: mysql
          mountPath: /mysql
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      serviceAccountName: mysql-client
      volumes:
      - name: mysql
        persistentVolumeClaim:
          claimName: mysql
