otc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: cluster-name.example.com
    service.beta.kubernetes.io/openstack-internal-load-balancer: "false"
    loadbalancer.openstack.org/x-forwarded-for: "false"
  labels:
    app: otc-lb
  name: otc-lb
  namespace: ingress-nginx
spec:
  externalTrafficPolicy: Local
  healthCheckNodePort: 30080
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
  selector:
    app: ingress-nginx
  sessionAffinity: ClientIP
  type: LoadBalancer
