mysql-client_volume.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mysql-client
  name: mysql-client
spec:
  serviceName: mysql-client
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mysql-client
  template:
    metadata:
      labels:
        app: mysql-client
    spec:
      containers:
      - image: mtr.devops.telekom.de/mcsps/mysql-client:0.0.4
        imagePullPolicy: Always
        command: ['sh', '-c']
        args: ["tail -f /dev/null"]
        name: mysql-client
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 1000
        volumeMounts:
        - name: workdir
          mountPath: /home/appuser
        - name: mysql
          mountPath: /mysql
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        supplementalGroups:
        - 1000
      terminationGracePeriodSeconds: 3
      serviceAccountName: mysql-client
      volumes:
      - name: workdir
        emptyDir: {}
      - name: mysql
        persistentVolumeClaim:
          claimName: mysql
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  name: np-mysql-client
spec:
  egress:
  - ports:
    - port: 3306
      protocol: TCP
  - ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app: mysql-client
  policyTypes:
  - Egress
